--- a/sections/product_detail_information.liquid
+++ b/sections/product_detail_information.liquid
@@ -281,7 +281,7 @@
                         
                                     <div class="product-info__pay-text">
                                        <b>Pay in Installments</b>: &nbsp;
-                                       <p class="affirm-as-low-as" data-page-type="product" data-amount="{{variant.price}}"></p>
+                                       <p class="affirm-as-low-as" id="affirm-container" data-page-type="product" data-amount="{{variant.price}}"></p>
                                     </div>
 
                                     <div class="product-info__buttons">
