--- a/snippets/sustainability_desktop.liquid
+++ b/snippets/sustainability_desktop.liquid
@@ -19,7 +19,7 @@
    {%- endfor -%}
 
 
-   <div class="sustainability__wrapper-tabs">
+   <!--<div class="sustainability__wrapper-tabs">
        <div class="sustainability__tabs">
             <span class="sustainability__tab"><img src="{{ 'teaser-1.png' | asset_url }}" alt="brand" class="brands__item img-responsive"></span>
             <span class="sustainability__tab"><img src="{{ 'teaser-2.png' | asset_url }}" alt="brand" class="brands__item img-responsive"></span>
@@ -29,5 +29,6 @@
             <span class="sustainability__tab"><img src="{{ 'teaser-6.png' | asset_url }}" alt="brand" class="brands__item img-responsive"></span>
 		</div>      
    </div>
+   -->
    
 </div>
