--- a/web-flair/app/sass/_media.sass
+++ b/web-flair/app/sass/_media.sass
@@ -598,6 +598,19 @@
 		flex: 0 0 163px
 
 
+	.product-card__product-info-container
+		max-width: 100%
+		width: 99%
+		min-width: auto
+
+	.product-info__pay-text
+		white-space: nowrap
+
+		.affirm-as-low-as
+			white-space: nowrap
+
+
+
 
 // 575
 +media-breakpoint-down(xs)
