--- a/web-flair/app/sass/blocks/product-info/_product-info.sass
+++ b/web-flair/app/sass/blocks/product-info/_product-info.sass
@@ -183,6 +183,13 @@
 		.affirm-ala-price
 			color: $accent
 			font-family: $bold
+
+		.affirm-modal-trigger
+			display: none
+
+		.__affirm-logo
+			&:hover
+				cursor: pointer
 		
 
 .product-info__affirm-image
