--- a/web-flair/app/sass/blocks/top-nav/_top-nav.sass
+++ b/web-flair/app/sass/blocks/top-nav/_top-nav.sass
@@ -1,7 +1,10 @@
 .top-nav
 	background-color: $text
-	color: #fff
+	color: #fff	
 	font-size: 13px
+
+.top-nav__nav
+	display: flex
 
 .top-nav__content
 	display: -webkit-flex
