--- a/sections/services.liquid
+++ b/sections/services.liquid
@@ -59,9 +59,14 @@
 											</div>
 
 											<div class="more-info__start-from">
-												<div class="more-info__price-title">Starting from</div>
-												<div class="more-info__price">$150.00 Storage Bundle</div>
-												<div class="more-info__include_text">* Includes Shipping</div>
+												<!--<div class="more-info__price-title">Starting from</div>
+												<div class="more-info__price">$150.00 Storage Bundle</div>-->
+												<div class="more-info__include_text">
+												   You will charged o <strong>non-refutable $25 fee</strong>
+												   for pickup at the time of booking. Upon receiving your
+												   garment(s), we will call you to review the final pricing
+												   before beginning the services
+												</div>
 											</div>
 											
 											<button class="form-button form-button_height_sm form-button_fontsize_sm" id="add_to_cart_service">Request this service</button>
@@ -81,7 +86,7 @@
 							</div>
 						</div>
 
-						<div class="row">
+						<!--<div class="row">
 							<div class="col-lg-10 offset-lg-1">
 								<div class="main-services__teasers">
 									<div class="row">
@@ -118,7 +123,7 @@
 									</div>
 								</div>
 							</div>
-						</div>
+						</div>-->
 
 						
 
@@ -129,12 +134,30 @@
 								</div>
 								<div class="more-info main-services__more-info more-info_bottom">
 									<div class="more-info__content">
-										<div class="more-info__title">Expert Fur Service</div>
-										<div class="more-info__text">With proper care, quality furs will maintain their beauty and soft touch season after season. ML Furs provides a full line of on-site fur services including cleaning, glazing, storage, repair, restyling, appraisals, trade-ins and special orders. Since 1951, spanning decades of experience, and a commitment to attentive customer care, our master furriers will keep your fur, shearling, and leather garments as luxurious and soft as the day they were purchased.</div>
-										<div class="more-info__text">How do you protect your furs against standard wear and tear, whether vintage or brand new? Most importantly, professional storage during the spring and summer months is imperative to expanding the lifespan of your invaluable furs. During the spring and summer months, it is crucial that fur coats, jackets, and vests are shielded from humidity, extreme temperatures, dryness, and insects. ML Furs not only welcomes you to store your furs in our insured, secure vault for the season; we make it easy with free pickup and delivery in the Denver Metro area and shipping options across the United States.</div>
-										<div class="more-info__text">Most fur owners use fur storage as an opportunity to have their garments professionally cleaned and glazed. Dust, dirt, and solvents threaten the beauty and longevity of your furs and require the gentle hand of a professional to be properly removed. Our master furriers handle your most coveted fur coats, jackets, and vests with respect and care. In addition to cleaning, our fur services include detailed inspections and repair quotes. To best protect your investment, furs should be repaired immediately if loose closures, seam openings, or minor wear are detected. ML Furs will restore your garments to their finest condition so you can enjoy your warmest, most stylish coat during their life span. With thoughtful customer service, our knowledgeable furriers also do appraisals and place special orders to fulfill your every need.</div>
-										<div class="more-info__text">If you want to bring new life to an old fur, ML Furs has the expert touch and fashion know-how to restyle outdated patterns into contemporary coats, jackets, vests, accessories, and home decor you’ll love. Or you can trade in an old fur towards the purchase of a pristine garment in today’s hottest style. With our full suite of fur services, ML Furs is dedicated to keeping your wardrobe updated and in good repair all year long.</div>
+										<div class="more-info__title">Denver's Most Trusted Furrier Since 1951</div>
+										<div class="more-info__text">
+										   Store your fur garments in MLFurs' insured, secured, storage vaults for protection from humidity, insects, and pests
+										   during the spring and summer months; It's like a summer vacation at a world class resort for you precious fur garments
+										</div>
+
+										<a class="more-info__link" href="/pages/about">Learn More About ML Furs</a>
+
+										<div class="more-info__title">The MLFurs Difference</div>
+										<div class="more-info__text">
+										   Find out what makes MLFurs difference - from storage conditions to cleaning standards. Call and speak to a Fur
+										   Expert today at 1-877-653-3877
+										</div>
+
+										<a class="more-info__link" href="#">Learn More</a>
+
+										<div class="more-info__title">Our Prices</div>
+										<div class="more-info__text">
+										   View a detailed price sheet for all services offered
+										</div>
+
+										<a class="more-info__link" href="#">View Full Price Chart</a>
 									</div>
+									
 									<div class="more-info__image" style="background-image: url({{ section.settings.more_info | img_url: 'master' }});"></div>
 								</div>
 							</div>
@@ -148,7 +171,7 @@
 	</section>
 
 
-	<section class="d-none d-sm-block">
+	<!--<section class="d-none d-sm-block">
 		<div class="container-fluid">
 			<div class="row">
 				<div class="col-lg-10 offset-lg-1">
@@ -163,7 +186,7 @@
 				</div>
 			</div>
 		</div>
-	</section>
+	</section> -->
 
 
 <script>
