--- a/web-flair/app/sass/blocks/more-info/_more-info.sass
+++ b/web-flair/app/sass/blocks/more-info/_more-info.sass
@@ -6,6 +6,19 @@
 	display: flex
 	box-shadow: 0 0 30px 5px  rgba($text, .3)
 
+	&_bottom
+		margin-top: 60px
+		
+	&__link
+		color: $accent
+		display: block
+		font-size: 13px
+		margin-bottom: 20px
+
+		&:hover
+			color: $accent
+
+		
 .more-info__image
 	flex: 0 0 50%
 	background-size: cover
@@ -24,7 +37,8 @@
 .more-info__text
 	font-size: 14px
 	font-family: $light
-	margin-bottom: 35px
+	margin-bottom: 10px
+
 	&:last-child
 		margin-bottom: 0
 
@@ -34,7 +48,9 @@
 		margin-bottom: 0
 
 .more-info__start-from
-	margin: 40px 0
+	margin: 20px 0 30px 0
+	padding-left: 5px
+	padding-right: 5px
 	text-align: center
 	line-height: 1.2
 
@@ -50,12 +66,10 @@
 
 .more-info__include_text
 	font-size: 14px
-	font-family: $semi-bold
-	font-style: italic
+	font-family: $light
 
 .more-info__list_steps
 	padding-left: 15px
 	li 
 		font-family: $semi-bold
 		list-style: decimal
-
