--- a/sections/footer.liquid
+++ b/sections/footer.liquid
@@ -76,9 +76,11 @@
 					<div class="footer__bottom">
 						<div class="footer__bottom-left">
 							<ul class="footer__bottom-menu">
+                              	<li class="footer__bottom-menu-item"><a class="footer__bottom-menu-link" href="https://www.mlfurs.com/blog/" target="_blank">Blog</a></li>
 								<li class="footer__bottom-menu-item"><a class="footer__bottom-menu-link" href="https://www.linkedin.com/jobs/cap/view/307980704/?pathWildcard=307980704&trk=job_capjs" target="_blank">Careers</a></li>
-								<li class="footer__bottom-menu-item"><a class="footer__bottom-menu-link" href="/pages/sitemap">Sitemap</a></li>
 								<li class="footer__bottom-menu-item"><a class="footer__bottom-menu-link" href="/pages/privacy-and-security">Privacy Policy</a></li>
+                                <!--<li class="footer__bottom-menu-item"><a class="footer__bottom-menu-link" href="/pages/sitemap">Sitemap</a></li>-->
+								
 							</ul>
 							<div class="footer__bottom-copyright">&copy; 2018 Marks-Lloyds Furs. All Rights Reserved</div>
 						</div>
