--- a/sections/header.liquid
+++ b/sections/header.liquid
@@ -16,7 +16,7 @@
                     <a href="/account/register" class="top-nav__nav-item top-nav__nav-item_icon_user">login/Sign Up</a>
                 {% endif %}
 
-                <div class="sd_dropdown-mini-cart">
+                <!--<div class="sd_dropdown-mini-cart">
                    <div class="sd_dropdown-minibag"> 
                       <span class="top-nav__nav-item top-nav__nav-item_icon_cart">Bag<span class="dropcount"></span></span>
                       
@@ -24,8 +24,8 @@
                    <div class="sd_dropdown-inner-area">
                      <div class="sd_dropdown-cart-items"></div> 
                    </div>
-                </div>                
-                <!--<a href="/cart" class="top-nav__nav-item top-nav__nav-item_icon_cart">Bag</a>-->
+                </div>-->                
+                <a href="/cart" class="top-nav__nav-item top-nav__nav-item_icon_cart">Bag</a>
               </div>
             </div>
           </div>
@@ -73,7 +73,7 @@
                     <a href="/account/register" class="mobile-nav__item popup"><img src="{{ 'user-dark.png' | asset_url }}" alt="User" ></a>
                 {% endif %}
  
-                <div class="mobile-nav__item">
+                <!--<div class="mobile-nav__item">
                   <div class="sd_dropdown-mini-cart">
                     <div class="sd_dropdown-minibag"> 
                         <span><img src="{{ 'cart-dark.png' | asset_url }}" alt="cart" ></span>
@@ -83,9 +83,9 @@
                       <div class="sd_dropdown-cart-items"></div> 
                     </div>
                   </div>
-                </div>
+                </div>-->
 
-                <!--<a href="#" class="mobile-nav__item"><img src="{{ 'cart-dark.png' | asset_url }}" alt="search" ></a>-->
+                <a href="#" class="mobile-nav__item"><img src="{{ 'cart-dark.png' | asset_url }}" alt="search" ></a>
               </div>
 
               <nav class="menu grid__item medium-up--one-half small--hide" id="AccessibleNav" role="navigation">
