--- a/snippets/nav-sidebar.liquid
+++ b/snippets/nav-sidebar.liquid
@@ -1,13 +1,13 @@
 				<div class="col-3 d-none d-lg-block">
 					<ul class="nav-sidebar">
 						<li class="nav-sidebar__item">
-							<a href="#" class="nav-sidebar__link {% if option_selected == 'about' %}nav-sidebar__link_active {% endif %}">About</a>
+							<a href="about" class="nav-sidebar__link {% if option_selected == 'about' %}nav-sidebar__link_active {% endif %}">About</a>
 						</li>
 						<li class="nav-sidebar__item">
-							<a href="#" class="nav-sidebar__link {% if option_selected == 'contact' %}nav-sidebar__link_active {% endif %}">Contact us</a>
+							<a href="contact" class="nav-sidebar__link {% if option_selected == 'contact' %}nav-sidebar__link_active {% endif %}">Contact us</a>
 						</li>
 						<li class="nav-sidebar__item">
-							<a href="#" class="nav-sidebar__link">Customer reviews</a>
+							<a href="reviews" class="nav-sidebar__link">Customer reviews</a>
 						</li>
 						<li class="nav-sidebar__item">
 							<a href="#" class="nav-sidebar__link">Appointments</a>
@@ -16,22 +16,22 @@
 							<a href="#" class="nav-sidebar__link">Did you know</a>
 						</li>
 						<li class="nav-sidebar__item">
-							<a href="#" class="nav-sidebar__link">Size chart</a>
+							<a href="size-chart" class="nav-sidebar__link">Size chart</a>
 						</li>
 						<li class="nav-sidebar__item">
-							<a href="#" class="nav-sidebar__link">Free shipping</a>
+							<a href="free-shipping" class="nav-sidebar__link">Free shipping</a>
 						</li>
 						<li class="nav-sidebar__item">
-							<a href="#" class="nav-sidebar__link">Layaway & Bill me later</a>
+							<a href="/pages/customer-service-layaway" class="nav-sidebar__link">Layaway & Bill me later</a>
 						</li>
 						<li class="nav-sidebar__item">
-							<a href="#" class="nav-sidebar__link">Faq`s</a>
+							<a href="/customer-service-faq" class="nav-sidebar__link">Faq`s</a>
 						</li>
 						<li class="nav-sidebar__item">
-							<a href="#" class="nav-sidebar__link">Privacy & Security</a>
+							<a href="/privacy-and-security" class="nav-sidebar__link">Privacy & Security</a>
 						</li>
 						<li class="nav-sidebar__item">
-							<a href="#" class="nav-sidebar__link">Policies</a>
+							<a href="/policies" class="nav-sidebar__link">Privacy Policy</a>
 						</li>
 					</ul>
 				</div>
