--- a/snippets/sca-quick-view-template.liquid
+++ b/snippets/sca-quick-view-template.liquid
@@ -1,4 +1,4 @@
-<div id="sca-qv-showqv" class="sca-bm" style="display: none !important;">  
+<div id="sca-qv-showqv" class="" style="display: none !important;">  
  <div>
 	<!--START PRODUCT-->
 	 <div class="quick-view-container fancyox-view-detail">
