--- a/templates/customers/login.liquid
+++ b/templates/customers/login.liquid
@@ -37,7 +37,7 @@
 
 			</div>
 			<div class="login-popup__right-part">
-				<img src="{{ 'login-image.png' | asset_url }}" alt="Login" class="img-responsive img-width">
+				<img src="{{ 'preview-full-SignUp_image_alt1.jpg' | asset_url }}" alt="Login" class="img-responsive img-width">
 				<div class="login-popup__text">
 					<div class="login-popup__text-title">Ml Furs Advantage</div>
 					<div class="login-popup__list">
