--- a/templates/customers/register.liquid
+++ b/templates/customers/register.liquid
@@ -27,15 +27,17 @@
 
 			</div>
 			<div class="login-popup__right-part">
-				<img src="{{ 'login-image.png' | asset_url }}" alt="Login" class="img-responsive img-width">
+				<img src="{{ 'preview-full-SignUp_image_alt1.jpg' | asset_url }}" alt="Login" class="img-responsive img-width">
 				<div class="login-popup__text">
-					<div class="login-popup__text-title">Ml Furs Advantage</div>
+					<div class="login-popup__text-title">Sign up today and start living luxuriously!</div>
 					<div class="login-popup__list">
-						<li class="login-popup__list-item">Lorem ipsum dolor sit amet.</li>
-						<li class="login-popup__list-item">Lorem ipsum dolor sit.</li>
-						<li class="login-popup__list-item">Lorem ipsum dolor.</li>
-						<li class="login-popup__list-item">Lorem ipsum dolor sit.</li>
-						<li class="login-popup__list-item">Lorem ipsum.</li>
+						<li class="login-popup__list-item">Receive <strong>20%</strong> off your first purchase</li>
+						<li class="login-popup__list-item">Automatic enrollment in our upcoming referral and loyalty programs.</li>
+						<li class="login-popup__list-item">Sneak peeks at the newest arrivals.</li>
+						<li class="login-popup__list-item">Access to exclusive deals throughout the year.</li>
 					</div>
 				</div>
 			</div>
+		</div>
+	</div>
+</div>
