--- a/web-flair/app/sass/blocks/form-card/_form-card.sass
+++ b/web-flair/app/sass/blocks/form-card/_form-card.sass
@@ -53,6 +53,11 @@
 	&:last-child
 		margin-bottom: 0
 
+.term-conditions-text
+	font-size: 14px
+	font-style: italic
+	margin-top: 10px
+
 .form-card_detail-name_large
 	font-size: 18px
 
