--- a/web-flair/app/sass/blocks/login-popup/_login-popup.sass
+++ b/web-flair/app/sass/blocks/login-popup/_login-popup.sass
@@ -27,6 +27,7 @@
 	padding-bottom: 15px
 	border-bottom: 1px solid $gray
 	line-height: 1
+	white-space: nowrap
 
 .login-popup__list-item
 	font-family: $semi-bold
